kubernetes.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pelorus-api
  namespace: pelorus-api
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/name: pelorus-api
    app.kubernetes.io/version: ${APP_VERSION}
spec:
  to:
    kind: Service
    name: pelorus-api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: ''
    destinationCACertificate: ''
  port:
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: bc0ec63a3b1f053fc95dd2f037958c84866773b8
    app.quarkus.io/build-timestamp: 2023-10-03 - 18:46:17 +0000
  labels:
    app.kubernetes.io/name: pelorus-api
    app.kubernetes.io/version: ${APP_VERSION}
    app.kubernetes.io/managed-by: quarkus
  name: pelorus-api
  namespace: pelorus-api
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: pelorus-api
    app.kubernetes.io/version: ${APP_VERSION}
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: bc0ec63a3b1f053fc95dd2f037958c84866773b8
    app.quarkus.io/build-timestamp: 2023-10-03 - 18:46:17 +0000
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/name: pelorus-api
    app.kubernetes.io/version: ${APP_VERSION}
  name: pelorus-api
  namespace: pelorus-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pelorus-api
      app.kubernetes.io/version: ${APP_VERSION}
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: bc0ec63a3b1f053fc95dd2f037958c84866773b8
        app.quarkus.io/build-timestamp: 2023-10-03 - 18:46:17 +0000
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/name: pelorus-api
        app.kubernetes.io/version: ${APP_VERSION}
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: AUTH_TOKEN
          value: /var/run/secrets/kubernetes.io/serviceaccount/token
        - name: PELORUS_URL
          value: "https://prometheus-pelorus.pelorus.svc:9091/api/v1"
        - name: JAVA_OPTS
          value: "-Djavax.net.ssl.trustStore=/var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt -Dquarkus.log.category.\"javax.net.ssl\".level=DEBUG"
<<<<<<< Updated upstream
        - name: CORS_ORIGINS
          value: "https://dev-intel-dev-intel.apps.cluster-hblwp.dynamic.redhatworkshops.io"
        image: quay.io/etsauer/quarkus-app:${APP_VERSION}
=======
        image: quay.io/etsauer/quarkus-app:fastjar
>>>>>>> Stashed changes
        imagePullPolicy: Always
        name: pelorus-api
        ports:
          - containerPort: 8080
            name: http
            protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
